debugged overflow issue

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,11 @@
 *{
   border:0px;
   margin:0px;
+  padding:0px;
+  overflow-x: none;
+}
+
+html,body{
+  overflow-x: hidden;
+  overflow-y: auto;
 }
